<resources>
    <string name="app_name">Trivia App</string>
    <string name="ask_name">What is your name?</string>
    <string name="enter_name">Enter Name</string>
    <string name="btn_next">Next</string>
    <string name="ques_one">Who is the best cricketer in the world?</string>

    <string name="sachin_tendulkar">A) Sachin Tendulkar</string>
    <string name="virat_kohli">B) Virat Kohli</string>
    <string name="adam_gilchirst">C) Adam Gilchirst</string>
    <string name="jacques_kallis">D) Jacques Kallis</string>
    <string name="ques_two">What are the colors in the Indian national flag? Select all: Select more than 1</string>
    <string name="a_white">A) White</string>
    <string name="b_yellow">B) Yellow</string>
    <string name="c_orange">C) Orange</string>
    <string name="d_green">D) Green</string>
    <string name="hello_grishma">Hello Grishma,</string>
    <string name="here_are_the_answers_selected">Here are the answers selected:</string>
    <string name="ans">Answer : \"\"</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_history">History</string>
</resources>
