<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".view.SecondQuestionActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/checkBox1"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/ques_two"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/a_white" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox1"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/b_yellow" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox2"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/c_orange" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox3"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/d_green" />

        <Button
            android:id="@+id/btnNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/btn_next" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>