<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/tvGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_grishma"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_grishma"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:id="@+id/tvQues1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques_one"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvAns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
        android:textStyle="italic"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvQues2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques_two"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvAns2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
        android:textStyle="italic"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"/>
</LinearLayout>
